<resources>
    <string name="app_name">Assessment!</string>
    <string name="intro">Aplikasi Penghitung PPN</string>
    <string name="nama">Nama Barang</string>
    <string name="harga">Harga</string>
    <string name="jumlah">Jumlah</string>
    <string name="hitung">Hitung</string>
    <string name="hasil_x">%1$.2f</string>
    <string name="total_x">%1$.2f</string>
    <string name="ppn">PPN :</string>
    <string name="total_bayar">Total Bayar :</string>
    <string name="nama_invalid">alas tidak boleh kosong.</string>
    <string name="harga_invalid">Tinggi tidak boleh kosong.</string>
    <string name="jumlah_invalid">Tinggi tidak boleh kosong.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="copyright">Ini adalah aplikasi untukk menghitung Pajak Pertamabahan Nilai (PPN)</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">Nama : kopi \nHarga : %2$s \njumlah: %2$s</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="hasil_xx">PPN:  %1$.2f \nTotal: %1$.2f</string>
    <string name="data_x">Nama: Riska - Harga: %1$.1f - Jumlah:  %1$.2f</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="koneksi_error">Koneksi Error</string>
    <string name="objek_non_ppn">Objek non PPN</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data objek non ppn otomatis</string>
    <string name="notif_title">Ada objek non ppn yang baru!</string>
    <string name="notif_text">Lihat sekarang..</string>
</resources>