<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/hitungFragment">
    <fragment
        android:id="@+id/hitungFragment"
        android:name="org.d3if4062.assessment3.ui.hitung.HitungFragment"
        android:label="fragment_hitung"
        tools:layout="@layout/fragment_hitung" >
        <action
            android:id="@+id/action_hitungFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_hitungFragment_to_historiFragment"
            app:destination="@id/historiFragment" />
        <action
            android:id="@+id/action_hitungFragment_to_objekNonPpnFragment"
            app:destination="@id/objekNonPpnFragment" />

    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.d3if4062.assessment3.ui.AboutFragment"
        android:label="@string/tentang_aplikasi"
        tools:layout="@layout/fragment_about"/>
    <fragment
        android:id="@+id/objekNonPpnFragment"
        android:name="org.d3if4062.assessment3.ui.objek_non_ppn.ObjekNonPpnFragment"
        android:label="@string/objek_non_ppn"
        tools:layout="@layout/fragment_objek_non_ppn"/>
    <fragment
        android:id="@+id/historiFragment2"
        android:name="org.d3if4062.assessment3.ui.histori.HistoriFragment"
        android:label="HistoriFragment" />
    <fragment
        android:id="@+id/historiFragment"
        android:name="org.d3if4062.assessment3.ui.histori.HistoriFragment"
        android:label="@string/histori"
        tools:layout="@layout/fragment_histori" />
</navigation>